Add feature:   Use Shift+arrow keys to switch windows.

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,10 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Use Shift+arrow keys to switch windows
+bind -n S-Left previous-window
+bind -n S-Right next-window
+
 # Mouse mode
 set -g mode-mouse on
 set -g mouse-resize-pane on
