Add plugins:   tpm   tmux-resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ set -g mouse-select-window on
 # Set easier window split keys
 bind | split-window -h
 bind - split-window -v
-unbind '""'
+unbind '"'
 unbind %
 
 # Easy config reload
@@ -30,3 +30,7 @@ bind r source-file ~/.tmux.conf \; display-message "tmus.conf reloaded."
 
 # Keep window's name fixed
 set-option -g allow-rename off
+
+# Initialize tmux plugin manager (keep this line at the very bottom)
+run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
