--- a/tmux.conf
+++ b/tmux.conf
@@ -4,10 +4,12 @@ unbind C-b
 bind C-a send-prefix
 
 # Use Alt-arrow keys to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# Smart pane switching with awareness of vim splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n M-Left if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n M-Down if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n M-Up if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n M-Right if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # Use Shift+arrow keys to switch windows
 bind -n S-Left previous-window
@@ -30,6 +32,8 @@ bind r source-file ~/.tmux.conf \; display-message "tmus.conf reloaded."
 
 # Keep window's name fixed
 set-option -g allow-rename off
+
+set -g default-terminal "screen-256color"
 
 # Initialize tmux plugin manager (keep this line at the very bottom)
 run '~/.tmux/plugins/tpm/tpm'
