Change mouse option for tmux 2.1

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,10 +16,8 @@ bind -n S-Left previous-window
 bind -n S-Right next-window
 
 # Mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
 
 # Set easier window split keys
 bind | split-window -h
