--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,10 @@ bind -n S-Right next-window
 set -g mouse-utf8 on
 set -g mouse on
 
+# Get the mouse behavior before tmux 2.1 back
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
 # Set easier window split keys
 bind | split-window -h
 bind - split-window -v
