--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,15 @@
 set -g prefix C-z
 unbind C-b
 
+# Use Alt+arrow keys to switch panes
+# Smart pane switching with awareness of vim splits
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+        | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind -n M-Left if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n M-Down if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n M-Up if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n M-Right if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+
 # Use Shift+arrow keys to switch windows
 bind -n S-Left previous-window
 bind -n S-Right next-window
@@ -12,12 +21,13 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+set -g allow-rename off
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
