Vi in tmux copy mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,6 +23,8 @@ unbind %
 
 set -g allow-rename off
 
+set -g mode-keys vi
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
