Change tmux prefix

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Set prefix
-set -g prefix C-z
+set -g prefix M-z
 unbind C-b
 
 # Use Alt+arrow keys to switch panes
@@ -16,8 +16,8 @@ bind -n S-Left previous-window
 bind -n S-Right next-window
 
 # Set easier window split keys
-bind | split-window -h
-bind - split-window -v
+bind -n M-\ split-window -h
+bind -n M-- split-window -v
 unbind '"'
 unbind %
 
