Change tmux-resurrect key bindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,5 +35,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @resurrect-save 'M-s'
+set -g @resurrect-restore 'M-r'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
