Update plugins and status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,38 @@
+set -g default-terminal xterm-256color
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # Set prefix
 set -g prefix M-z
 unbind C-b
 
-set -g allow-rename off
-
 set -g mode-keys vi
+set -g mouse on
+
+setw -g allow-rename off
+
+set -g pane-border-style "fg=colour246"
+set -g pane-active-border-style "fg=colour223"
+
+set -g status-bg colour237
+
+set -g status-left "\
+#[fg=colour235 bold, bg=colour246]#{?client_prefix,#[bg=colour166],} ❐ #S \
+#[fg=colour246, bg=colour237]#{?window_zoomed_flag, Z ,   }"
+
+set -g status-right "\
+#[fg=colour235, bg=colour246] #H "
+
+setw -g window-status-format "\
+#[fg=colour248, bg=colour237] #W "
+
+setw -g window-status-current-format "\
+#[fg=colour248, bg=colour239 bold] #W "
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
-set -g @resurrect-save 'M-s'
-set -g @resurrect-restore 'M-r'
+set -g @plugin 'tmux-plugins/tmux-logging'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
