--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,6 @@
 set -g default-terminal xterm-256color
 set -ga terminal-overrides ",xterm-256color:Tc"
 
-# Set prefix
 set -g prefix M-z
 unbind C-b
 
@@ -16,10 +15,11 @@ set -g pane-active-border-style "fg=colour223"
 set -g status-bg colour237
 
 set -g status-left "\
-#[fg=colour235 bold, bg=colour246]#{?client_prefix,#[bg=colour166],} ❐ #S \
-#[fg=colour246, bg=colour237]#{?window_zoomed_flag, Z ,   }"
+#[fg=colour235 bold, bg=colour246] ❐ #S \
+#[fg=colour246, bg=colour237]    "
 
 set -g status-right "\
+#[fg=colour246, bg=colour237] #{?window_zoomed_flag,Z, } \
 #[fg=colour235, bg=colour246] #H "
 
 setw -g window-status-format "\
