--- a/coc-settings.json
+++ b/coc-settings.json
@@ -10,4 +10,12 @@
     "typescriptreact"
   ],
   "eslint.autoFixOnSave": true,
+  "languageserver": {
+    "clangd": {
+      "command": "clangd",
+      "args": ["--background-index"],
+      "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
+      "filetypes": ["c", "cpp", "objc", "objcpp"]
+    }
+  },
 }
